[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ccna"
version = "0.1.0"
description = ""
authors = ["Cedric Anover <cedric.anover@hotmail.com>"]
readme = "README.md"
packages = [{include = "ccna", from = "src"}]

# [tool.poetry.scripts]
# ccna = "ccna.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
# flake8 = "^7.1.1"
# https://pypi.org/project/pyproject-flake8/
pyproject-flake8 = "^7.0.0"  # Usage: `poetry run pflake8`

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.flake8]
max-line-length = 120
ignore = ["E226", "E302", "E41", "E501"]
extend-ignore = []
exclude = [
    ".git", 
    "__pycache__", 
    "docs/source/conf.py", 
    "build", 
    "dist", 
    "venv",
    ".venv"
]

[tool.flake8.files]
include = ["src/**/*.py"]
